--- a/package.json
+++ b/package.json
@@ -1,29 +1,32 @@
 {
-    "name": "chart-total",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "serve": "vue-cli-service serve",
-        "build": "vue-cli-service build",
-        "lint": "vue-cli-service lint"
-    },
-    "dependencies": {
-        "axios": "^0.18.0",
-        "css-loader": "^2.1.0",
-        "normalize.css": "^8.0.1",
-        "style-loader": "^0.23.1",
-        "vue": "^2.6.6",
-        "vue-router": "^3.0.1"
-    },
-    "devDependencies": {
-        "@vue/cli-plugin-babel": "^3.0.0",
-        "@vue/cli-plugin-eslint": "^3.0.0",
-        "@vue/cli-service": "^3.0.0",
-        "babel-eslint": "^10.0.1",
-        "eslint": "^5.8.0",
-        "eslint-plugin-vue": "^5.0.0",
-        "node-sass": "^4.9.0",
-        "sass-loader": "^7.1.0",
-        "vue-template-compiler": "^2.5.21"
-    }
+  "name": "chart-total",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
+  },
+  "dependencies": {
+    "axios": "^0.18.0",
+    "css-loader": "^2.1.0",
+    "normalize.css": "^8.0.1",
+    "qs": "^6.6.0",
+    "style-loader": "^0.23.1",
+    "vant": "^1.6.9",
+    "vue": "^2.6.6",
+    "vue-router": "^3.0.1"
+  },
+  "devDependencies": {
+    "@vue/cli-plugin-babel": "^3.0.0",
+    "@vue/cli-plugin-eslint": "^3.0.0",
+    "@vue/cli-service": "^3.0.0",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.8.0",
+    "eslint-plugin-vue": "^5.0.0",
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.1.0",
+    "vue-template-compiler": "^2.5.21",
+    "babel-plugin-import": "^1.11.0"
+  }
 }
